WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192469
Web Share API: share overlay does not stick to the Safari window
https://bugs.webkit.org/show_bug.cgi?id=192469
Summary
Web Share API: share overlay does not stick to the Safari window
Tim Horton
Reported
2018-12-06 12:31:49 PST
Web Share API: share overlay does not stick to the Safari window
Attachments
Patch
(3.50 KB, patch)
2018-12-06 12:32 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-12-06 12:32:12 PST
Created
attachment 356740
[details]
Patch
Tim Horton
Comment 2
2018-12-06 12:32:15 PST
<
rdar://problem/46074833
>
WebKit Commit Bot
Comment 3
2018-12-06 14:11:55 PST
Comment on
attachment 356740
[details]
Patch Clearing flags on attachment: 356740 Committed
r238941
: <
https://trac.webkit.org/changeset/238941
>
WebKit Commit Bot
Comment 4
2018-12-06 14:11:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug